fix long para layout problems

--- a/java/redTweet/src/main/resources/static/css/news.css
+++ b/java/redTweet/src/main/resources/static/css/news.css
@@ -52,7 +52,7 @@ svg {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    /*align-items: center;*/
     padding: 30px 0;
 }
 
@@ -62,6 +62,14 @@ svg {
     margin: 30px 10px;
     width: 320px;
     height: 550px;
+    background-color: #fbfbfc;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.boxMid {
+    margin: 30px 10px;
+    width: 320px;
+    min-height: 550px;
     background-color: #fbfbfc;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
